--- a/staRt/www/states/root/auto/_auto_styles.scss
+++ b/staRt/www/states/root/auto/_auto_styles.scss
@@ -1,35 +1,13 @@
-// base layout
-.auto-contentBox {
+// ================================================
+// LAYOUT
+// ================================================
+.auto-layout_view-container {
 	position: relative;
 	display: flex;
 	width: 100vw;
 	height: 100vh;
 
-	.auto-ion-nav-bar {
-		.bar-header { // styles <ion-header-bar>
-		  background-color: $blue-light;
-		  height: $row-h !important; //iOS cordova will overwrite this if not !important
-		  display: flex;
-		  align-items: center;
-		  box-shadow: $itemShadow;
-		  padding-left: $navW;
-
-		  .title { // // styles .title w/in <ion-header-bar>
-		    position: relative;
-		    display: block;
-		    text-transform: uppercase;
-		    color: $blue-main;
-		    font-weight: bold;
-		    font-size: $header-type;
-		    line-height: 0; // this adjusts for weird iOS stuff
-		    padding-top: 10px; // also adjusts for weird iOS styling
-		    text-align: left;
-		    overflow: visible;
-		  } //end .title
-		} // end .bar-header
-	} // end profiles-ion-nav-bar
-
-	.auto-bg {
+	.auto-layout_bg-container {
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -38,7 +16,7 @@
 		z-index: 1;
 	}
 
-	.auto-layout {
+	.auto-layout_content-container  {
 		position: relative;
 		display: flex;
 		flex-direction: column;
@@ -52,6 +30,7 @@
 		// border: 1px solid cyan;
 	}
 }
+
 
 // ================================================
 // STATE STYLES
