--- a/staRt/www/states/root/free-play/_free_styles.scss
+++ b/staRt/www/states/root/free-play/_free_styles.scss
@@ -1,36 +1,15 @@
-// base layout
-.free-contentBox {
+// ================================================
+// LAYOUT
+// ================================================
+
+.free-layout_view-container {
 	position: relative;
   display: flex;
 	width: 100vw;
 	height: 100vh;
 	//background-color: $c-bg; //#2018
 
-	.free-ion-nav-bar {
-		.bar-header { // styles <ion-header-bar>
-		  background-color: $blue-light;
-		  height: $row-h !important; //iOS cordova will overwrite this if not !important
-		  display: flex;
-		  align-items: center;
-		  box-shadow: $itemShadow;
-		  padding-left: $navW;
-
-		  .title { // // styles .title w/in <ion-header-bar>
-		    position: relative;
-		    display: block;
-		    text-transform: uppercase;
-		    color: $blue-main;
-		    font-weight: bold;
-		    font-size: $header-type;
-		    line-height: 0; // this adjusts for weird iOS stuff
-		    padding-top: 10px; // also adjusts for weird iOS styling
-		    text-align: left;
-		    overflow: visible;
-		  } //end .title
-		} // end .bar-header
-	} // end profiles-ion-nav-bar
-
-	.free-bg {
+	.free-layout_bg-container {
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -39,7 +18,7 @@
 		z-index: 1;
 	}
 
-	.free-layout {
+	.free-layout_content-container  {
 		position: relative;
 		display: flex;
 		flex-flow: column nowrap;
