--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -1,36 +1,14 @@
-// base layout
-.profiles-contentBox {
+// ================================================
+// LAYOUT
+// ================================================
+.profiles-layout_view-container {
 	position: relative;
 	display: flex;
 	width: 100vw;
 	height: 100vh;
 	//background-color: $c-bg; //#2018
 
-	.profiles-ion-nav-bar {
-		.bar-header { // styles <ion-header-bar>
-		  background-color: $blue-light;
-		  height: $row-h !important;
-		  display: flex;
-		  align-items: center;
-		  box-shadow: $itemShadow;
-		  padding-left: $navW;
-
-		  .title { // // styles .title w/in <ion-header-bar>
-		    position: relative;
-		    display: block;
-		    text-transform: uppercase;
-		    color: $blue-main;
-		    font-weight: bold;
-		    font-size: $header-type;
-		    line-height: 0;
-		    padding-top: 10px;
-		    text-align: left;
-		    overflow: visible;
-		  } //end .title
-		} // end .bar-header
-	} // end profiles-ion-nav-bar
-
-	.profiles-bg {
+	.profiles-layout_bg-container {
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -39,7 +17,7 @@
 		z-index: 1;
 	}
 
-	.profiles-layout {
+	.profiles-layout_content-container {
 		position: relative;
 		display: flex;
 		flex-flow: row nowrap;
@@ -51,6 +29,7 @@
 		// border: 1px solid cyan;
 	}
 }
+
 
 // ================================================
 // STATE STYLES
@@ -64,7 +43,7 @@ p.display-name {
 	vertical-align: middle;
 }
 
-.flex-align-right{
+.flex-align-right {
 	display: flex;
 	flex-direction: row-reverse;
 }
