--- a/staRt/www/states/root/tutorial/_tutorial_styles.scss
+++ b/staRt/www/states/root/tutorial/_tutorial_styles.scss
@@ -1,32 +1,8 @@
 $rowH: 100vh / 7; //106px;
 $rowHalf: $rowH/2;
 
-.tut-ion-nav-bar {
-	.bar-header { // styles <ion-header-bar>
-		background-color: $blue-light;
-		height: $row-h !important; //iOS cordova will overwrite this if not !important
-		display: flex;
-		align-items: center;
-		box-shadow: $itemShadow;
-		padding-left: $navW;
 
-		.title { // // styles .title w/in <ion-header-bar>
-			position: relative;
-			display: block;
-			text-transform: uppercase;
-			color: $blue-main;
-			font-weight: bold;
-			font-size: $header-type;
-			line-height: 0; // this adjusts for weird iOS stuff
-			padding-top: 10px; // also adjusts for weird iOS styling
-			text-align: left;
-			overflow: visible;
-		} //end .title
-	} // end .bar-header
-} // end tut-ion-nav-bar
-
-
-.tut-contentBox  { // parent ele for tut content
+.tutorial-layout_view-container { // parent ele for tut content
 	// needs to be a flex
 	position: relative;
 	//margin-top: $rowH * 1.5;
