--- a/staRt/www/states/root/words/_words_styles.scss
+++ b/staRt/www/states/root/words/_words_styles.scss
@@ -1,37 +1,14 @@
-// base layout
-.quest-contentBox {
+// ================================================
+// LAYOUT
+// ================================================
+
+.quest-layout_view-container {
 	position: relative;
 	display: flex;
 	width: 100vw;
 	height: 100vh;
 
-
-	.quest-ion-nav-bar {
-
-		.bar-header { // styles <ion-header-bar>
-		  background-color: $blue-light;
-		  height: $row-h !important; //iOS cordova will overwrite this if not !important
-		  display: flex;
-		  align-items: center;
-		  box-shadow: $itemShadow;
-		  padding-left: $navW;
-
-		  .title { // // styles .title w/in <ion-header-bar>
-		    position: relative;
-		    display: block;
-		    text-transform: uppercase;
-		    color: $blue-main;
-		    font-weight: bold;
-		    font-size: $header-type;
-		    line-height: 0;
-		    padding-top: 10px;
-		    text-align: left;
-		    overflow: visible;
-		  } //end .title
-		} // end .bar-header
-	} // end profiles-ion-nav-bar
-
-	.quest-bg {
+	.quest-layout_bg-container {
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -40,7 +17,7 @@
 		z-index: 1;
 	}
 
-	.quest-layout {
+	.quest-layout_content-container {
 		position: relative;
 		display: flex;
 		flex-flow: column nowrap;
@@ -53,6 +30,8 @@
 		// border: 1px solid cyan;
 	}
 }
+
+
 
 // ================================================
 // STATE STYLES
