gives the lpc box in Resources > config page a width, so that it displays on screen

--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1315,6 +1315,10 @@ div.needleBox {
   margin-top: 1em;
   z-index: 10; }
 
+.res-lpcBox {
+  width: 50vw;
+  margin-top: 4.16667vh; }
+
 lpc-directive {
   display: -webkit-flex;
   -webkit-flex: 1;
