implements svg bg images for Free. Uncomment when ready to update this section.

--- a/staRt/www/states/root/free-play/_free_styles.scss
+++ b/staRt/www/states/root/free-play/_free_styles.scss
@@ -16,6 +16,8 @@
 		width: 100%;
 		height: 100%;
 		z-index: 1;
+
+		// the bg images for Free are styled in words_styles.scss
 	}
 
 	.free-layout_content-container  {
