--- a/staRt/www/states/root/auto/_auto_styles.scss
+++ b/staRt/www/states/root/auto/_auto_styles.scss
@@ -14,6 +14,16 @@
 		width: 100%;
 		height: 100%;
 		z-index: 1;
+
+		.img-bg_qz--BG {
+			background-color: $c-bg;
+			background-image: url("../img/bgImg/bg_quiz--background.svg");
+			z-index: 1 !important;
+		}
+		.img-bg_qz--FG {
+			background-image: url("../img/bgImg/bg_quiz--foreground.svg");
+			z-index: 5 !important;
+		}
 	}
 
 	.auto-layout_content-container  {
