--- a/staRt/www/states/root/words/_words_styles.scss
+++ b/staRt/www/states/root/words/_words_styles.scss
@@ -17,6 +17,7 @@
 		z-index: 1;
 
 		.img-bg_qtBF--BG {
+			background-color: $c-bg;
 			background-image: url("../img/bgImg/bg_quest-BF--background.svg");
 			z-index: 1;
 		}
