See #237. Implements svg bg img for Resources on main page . The 'adjust filter order page' retains the old styles.

--- a/staRt/www/app_styles.scss
+++ b/staRt/www/app_styles.scss
@@ -4,7 +4,8 @@
 @import 'common-styles/ui';
 @import 'common-styles/navAnimate';
 
-@import 'common-styles/dev/img-bg';
+// dev, to be deleted after redesign
+//@import 'common-styles/dev/img-bg';
 
 // State styles
 @import 'states/root/root_styles';
