--- a/staRt/www/states/root/words/_words_styles.scss
+++ b/staRt/www/states/root/words/_words_styles.scss
@@ -22,6 +22,7 @@
 			z-index: 1;
 		}
 		.img-bg_qtNoBF {
+			background-color: $c-bg;
 			background-image: url("../img/bgImg/bg_quest-NoBF.svg");
 			z-index: 1;
 		}
