--- a/staRt/www/app_styles.scss
+++ b/staRt/www/app_styles.scss
@@ -19,3 +19,4 @@
 
 // Directive styles
 @import 'common-components/lpc-directive/lpc-directive_styles';
+@import 'common-components/practice-directive/practice-directive_styles';
