--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1029,44 +1029,47 @@ div.needleBox {
     position: relative;
     display: flex;
     flex-direction: column;
-    margin-top: 25vh;
-    margin-left: 16.66vw;
-    height: 66.66667vh;
-    width: 75vw;
+    height: 100%;
+    width: 100%;
+    padding-top: 16.66667vh;
+    padding-left: 8.33333vw;
     justify-content: space-around;
     z-index: 10; }
 
-.probe-header {
+.quiz-menu-row {
+  position: relative;
+  display: flex;
   width: 100%;
-  flex: 1 0 auto; }
+  min-height: 16.66667vh;
+  padding-top: 8.33333vh;
+  padding-left: 8.33333vw;
+  padding-right: 8.33333vw; }
 
-.probe-header h2 {
-  text-align: center;
-  width: 55%;
-  margin: auto; }
+.quiz-header-row {
+  flex-flow: column nowrap;
+  text-align: center; }
+  .quiz-header-row h2 {
+    margin-bottom: 1em; }
 
-.probe-header p {
-  text-align: center;
-  width: 55%;
-  margin: auto; }
-
-.probe-description-row {
-  width: 100%;
-  flex: 1 0 auto;
-  display: flex;
-  justify-content: space-around; }
-
-.probe-description {
-  width: 30%; }
-
-.probe-button-class {
-  flex: 1 0;
-  display: flex;
-  justify-content: center; }
-
-.probe-buttons {
-  display: flex;
-  flex: 1 0 auto; }
+.quiz-description-row {
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  padding-bottom: 8.33333vh; }
+  .quiz-description-row .quiz-description {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    width: 30%; }
+    .quiz-description-row .quiz-description p {
+      min-height: 12.5vh; }
+    .quiz-description-row .quiz-description .btn-row {
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: space-around;
+      align-items: flex-start;
+      margin: 0;
+      padding: 0; }
 
 .free-layout_view-container {
   position: relative;
@@ -1125,68 +1128,12 @@ div.needleBox {
     display: flex;
     flex-flow: column nowrap;
     padding-top: 16.66667vh;
-    padding-left: 10vw;
+    padding-left: 8.33333vw;
     height: 100%;
     width: 100%;
     justify-content: space-around;
-    z-index: 10; }
-
-.words-progress-indicator {
-  display: inline-block;
-  vertical-align: middle; }
-
-.word-quest-wave-visible {
-  display: flex;
-  width: 100%;
-  justify-content: center; }
-
-.word-quest-wave-visible > .item {
-  display: flex;
-  width: 100%;
-  justify-content: center; }
-
-.word-quest-wave-visible .label {
-  padding: 0px; }
-
-.word-quest-wave-visible .input-label {
-  font-size: 30px; }
-
-.words-word {
-  font-size: 3.5em;
-  line-height: 1em;
-  display: inline-block;
-  vertical-align: middle;
-  color: #3D6D84; }
-
-.quest-contentBox button[disabled] {
-  background-color: lightgray;
-  color: gray; }
-
-.quest-header {
-  width: 100%;
-  flex: 1 0 auto;
-  margin-top: 10vh; }
-
-.quest-header h2 {
-  text-align: center;
-  width: 55%;
-  margin: auto; }
-
-.quest-header p {
-  text-align: center;
-  width: 55%;
-  margin: auto; }
-
-.quest-description-row {
-  width: 100%;
-  flex: 1 0 auto;
-  display: flex;
-  justify-content: space-around;
-  padding-left: 10vh;
-  padding-right: 10vh; }
-
-.quest-description {
-  width: 30%; }
+    z-index: 10;
+    border: 1px solid cyan; }
 
 .quest-button-class {
   flex: 1 0;
@@ -1209,7 +1156,62 @@ div.needleBox {
   z-index: 100000;
   position: absolute;
   top: 16.66667vh;
+  left: 91.66667vw;
   padding: 10px; }
+
+.quest-contentBox button[disabled] {
+  background-color: lightgray;
+  color: gray; }
+
+.quest-header-row {
+  width: 100%;
+  flex: 1 0 auto;
+  margin-top: 10vh; }
+  .quest-header-row h2 {
+    text-align: center;
+    width: 55%;
+    margin: auto; }
+  .quest-header-row p {
+    text-align: center;
+    width: 55%;
+    margin: auto; }
+
+.quest-description-row {
+  width: 100%;
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: space-around;
+  padding-left: 10vh;
+  padding-right: 10vh; }
+  .quest-description-row .quest-description {
+    width: 30%; }
+
+.word-quest-wave-visible {
+  display: flex;
+  width: 100%;
+  justify-content: center; }
+
+.word-quest-wave-visible > .item {
+  display: flex;
+  width: 100%;
+  justify-content: center; }
+
+.word-quest-wave-visible .label {
+  padding: 0px; }
+
+.word-quest-wave-visible .input-label {
+  font-size: 30px; }
+
+.words-progress-indicator {
+  display: inline-block;
+  vertical-align: middle; }
+
+.words-word {
+  font-size: 3.5em;
+  line-height: 1em;
+  display: inline-block;
+  vertical-align: middle;
+  color: #3D6D84; }
 
 .resources-layout_view-container {
   position: relative;
@@ -1498,3 +1500,36 @@ lpc-directive {
   bottom: 0px;
   width: 100.3%;
   background-color: #FFC95F; }
+
+.words-contentBox {
+  border: 1px solid red; }
+
+.promptBox-layout {
+  position: relative;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  height: 16.66667vh;
+  width: 100%; }
+  .promptBox-layout .promptBox {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-end;
+    margin-left: 16.66667vw;
+    padding-bottom: 1em;
+    align-items: center;
+    height: 16.66667vh;
+    width: 54.16667vw;
+    border-bottom: 1px solid white; }
+
+.words-word {
+  font-size: 5em;
+  line-height: 1em;
+  display: inline-block;
+  vertical-align: middle;
+  color: #3D6D84; }
+
+.words-progress-indicator {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 3em; }
